fixed overflow on control panel

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,2 +1,6 @@
 .buttonRow {
+  white-space: nowrap;
+  overflow: auto;
+  margin-left: -22px;
+  padding-left: 22px;
 }
